# sparc-transpiler

./: .gitignore  build.sh  codegen.ml  dune  example.sparc  example.ts  gentokens.ml  lexer.mll  lextest.ml  notes.md  output.txt  parser.ml  parser.mly  syntax.ml  test.ml  tokens.ml  transpile.ml
_build/default/: transpile.bc.runtime.js
_build/default/.js/base/: base.cma.js
_build/default/.js/base.base_internalhash_types/: base_internalhash_types.cma.js
_build/default/.js/base.caml/: caml.cma.js
_build/default/.js/base.md5/: md5_lib.cma.js
_build/default/.js/base.shadow_stdlib/: shadow_stdlib.cma.js
_build/default/.js/base_bigstring/: base_bigstring.cma.js
_build/default/.js/base_quickcheck/: base_quickcheck.cma.js
_build/default/.js/base_quickcheck.ppx_quickcheck.runtime/: ppx_quickcheck_runtime.cma.js
_build/default/.js/bigarray/: bigarray.cma.js
_build/default/.js/bin_prot.shape/: bin_shape_lib.cma.js
sparc/: example2.sparc  examples.sparc  expr_chain.sparc  fact5.sparc  find.sparc  if_else.sparc  left_asso.sparc  op_prec.sparc  option.sparc  plist.sparc  point.sparc  test.sparc
sparc/output/: expr_chain.out  if_else.out  left_asso.out  op_prec.out
sparc/outputs/: binding.out  case.out  datatype.out  func_app.out  if_else.out  left_asso.out  let.out  op_prec.out  pattern.out  points_list.out  tree_find.out
sparc/tests/: binding.sparc  case.sparc  datatype.sparc  expr_chain.sparc  func_app.sparc  let.sparc  op_prec.sparc  pattern.sparc  points_list.sparc  test.sparc  tree_find.sparc
ui/: index.html  main.css  main.js  prism.css  prism.js
(+33 files in other folders)
