; (ocamllex lexer)

; (menhir
;  (flags (--explain))
;  (modules parser))

; (executable
;  (name lextest)
;  (libraries core yojson))

(ocamllex lexer)

; (menhir
;  (flags (--explain --trace))
;  (modules parser))

(executables
 (names test)
 (libraries core)
 (preprocess
  (pps ppx_deriving.show)))