; (ocamllex lexer)

; (menhir
;  (flags (--explain))
;  (modules parser))

; (executable
;  (name lextest)
;  (libraries core yojson))

(ocamllex lexer)

(executables
  (names test transpile)
  (modes exe js)
  (libraries core js_of_ocaml)
  (preprocess
    (pps ppx_deriving.show js_of_ocaml-ppx)))
